[package]
name = "argon2-worker"
version = "0.1.0"
edition = "2021"
authors = ["Mikel <61402923+Cypheriel@users.noreply.github.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ['http', 'axum'] }
worker-macros = { version = "0.4.2", features = ['http'] }
getrandom = { version = "0.2.15", features = ["js"] }
axum = { version = "0.7", default-features = false, features = ["json", "query"] }
console_error_panic_hook = { version = "0.1.1" }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
tower-service = "0.3.3"
urlencoding = "2.1.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
